--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ PORT=5000
 # Session security (required for production)
 SESSION_SECRET=your-secure-session-secret-here-change-in-production
 
+# PostgreSQL connection (required for workflow research log persistence)
+# Example local configuration:
+# DATABASE_URL=postgres://valor_user:valorpass@localhost:5432/valor_vibe
+
 # Optional: enable live AI responses for the assistant
 # OPENAI_API_KEY=sk-...
-
-# Optional: database (not required for demo)
-# POSTGRES_URL=postgres://user:pass@host:5432/db
-# DATABASE_URL=postgres://user:pass@host:5432/db
