feat: enhance workflow integration, add session key hook, and update test infrastructure
- Add useSessionKey hook for secure session management
- Update workflow API and hooks across all modules
- Enhance integration tests for workflow presence and research logs
- Update database schema and types
- Improve server middleware and error handling
- Add comprehensive testing and validation scripts
- Document lint overrides

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,12 @@
       "rules": {
         "react/prop-types": "off"
       }
+    },
+    {
+      "files": ["scripts/**/*.ts", "scripts/**/*.tsx", "server/**/*.ts", "server/**/*.tsx"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "warn"
+      }
     }
   ],
   "ignorePatterns": [
